--- a/public/elements/dnews-elements.html
+++ b/public/elements/dnews-elements.html
@@ -1,1 +1,2 @@
-<link rel="import" href="dnews-story/dnews-story.html">
+<link rel="import" href="dnews-story-comments/dnews-story-comments.html">
+<link rel="import" href="dnews-story-url/dnews-story-url.html">
